

======================================================================
Changes since version 3.3.x

NOTE: Use this section for changes that are NOT included in the 3.3
branch.
======================================================================


General Changes
===============

These entries apply to all relevant language mappings unless otherwise
noted.

- Added Ice.Override.CloseTimeout property. This property overrides
  timeout settings used to close connections.

- Ice connections are now forcefully closed after sending a close
  connection message and once the connection timeout
  expires. Previously, the connection would only be closed when the
  object adapter or communicator was destroyed.

- The new Ice::ThreadHookPlugin class allows you to install thread 
  notification hooks during communicator initialization via plugins.

- Added Glacier2::Router::refreshSession, which keeps the client's
  Glacier2 session alive. This is useful in the case that the
  application architecture does not use a Glacier2 session
  manager. Modified demo/Glacier2/callback to demonstrate the use of
  this method.

- Fixed bug in icegridadmin where invalid XML could cause a crash.

- Fixed a bug where calling the object adapter waitForHold() method 
  would cause other calls on the object adapter to hang until the 
  waitForHold() method returned.

- Improved connection establishment scalability. Creating or accepting
  a new connection show now be done in constant time regardless of the
  number of connections already established or accepted.

- Fixed Glacier2 router bug which would cause the getCategoryForClient
  method to throw Ice::NullHandleException if the server endpoints
  were not set, instead it now returns an empty string.

- Ice.NegativeSizeException has been removed. The run time now throws
  MarshalException or UnmarshalOutOfBoundsException instead.

- The Ice thread pool now supports receiving and sending data over Ice