@@ -8,7 +8,7 @@
 // **********************************************************************
 
 //
-// Generated by makeprops.py from file ../config/PropertyNames.xml, Mon Oct 12 16:01:09 2009
+// Generated by makeprops.py from file ../config/PropertyNames.xml, Wed Oct 14 16:41:32 2009
 
 // IMPORTANT: Do not edit this file -- any edits made here will be lost!
 
@@ -482,7 +482,8 @@ const IceInternal::PropertyArray
 
 const IceInternal::Property Glacier2PropsData[] = 
 {
-    IceInternal::Property("Glacier2.AddSSLContext", false, 0),
+    IceInternal::Property("Glacier2.AddSSLContext", true, 0),
+    IceInternal::Property("Glacier2.AddConnectionContext", false, 0),
     IceInternal::Property("Glacier2.Admin.AdapterId", true, 0),
     IceInternal::Property("Glacier2.Admin.Endpoints", true, 0),
     IceInternal::Property("Glacier2.Admin.Locator", true, 0),
