@@ -8,7 +8,7 @@
 // **********************************************************************
 
 //
-// Generated by makeprops.py from file ../config/PropertyNames.xml, Mon Oct 12 16:01:09 2009
+// Generated by makeprops.py from file ../config/PropertyNames.xml, Wed Oct 14 16:41:32 2009
 
 // IMPORTANT: Do not edit this file -- any edits made here will be lost!
 
