@@ -30,12 +30,13 @@ router = TestUtil.getGlacier2Router()
 
 args = ' --Ice.Warn.Dispatch=0' + \
        ' --Glacier2.AddSSLContext=1' + \
+       ' --Glacier2.AddConnectionContext=1' + \
        ' --Glacier2.Client.Endpoints="tcp -h 127.0.0.1 -p 12347:ssl -h 127.0.0.1 -p 12348"' + \
        ' --Glacier2.Server.Endpoints="tcp -h 127.0.0.1"' \
        ' --Ice.Admin.Endpoints="tcp -h 127.0.0.1 -p 12349"' + \
        ' --Ice.Admin.InstanceName=Glacier2' + \
        ' --Glacier2.SessionManager="sessionmanager:tcp -h 127.0.0.1 -p 12350"' + \
-       ' --Glacier2.PermissionsVerifier="Glacier2/NullPermissionsVerifier"' + \
+       ' --Glacier2.PermissionsVerifier="verifier:tcp -h 127.0.0.1 -p 12350"' + \
        ' --Glacier2.SSLSessionManager="sslsessionmanager:tcp -h 127.0.0.1 -p 12350"' + \
        ' --Glacier2.SSLPermissionsVerifier="sslverifier:tcp -h 127.0.0.1 -p 12350"'
 
