@@ -8,7 +8,7 @@
 // **********************************************************************
 
 //
-// Generated by makeprops.py from file ../config/PropertyNames.xml, Mon Oct 12 16:01:09 2009
+// Generated by makeprops.py from file ../config/PropertyNames.xml, Wed Oct 14 16:41:32 2009
 
 // IMPORTANT: Do not edit this file -- any edits made here will be lost!
 
@@ -460,7 +460,8 @@ public final class PropertyNames
 
     public static final Property Glacier2Props[] = 
     {
-        new Property("Glacier2\\.AddSSLContext", false, null),
+        new Property("Glacier2\\.AddSSLContext", true, null),
+        new Property("Glacier2\\.AddConnectionContext", false, null),
         new Property("Glacier2\\.Admin\\.AdapterId", true, null),
         new Property("Glacier2\\.Admin\\.Endpoints", true, null),
         new Property("Glacier2\\.Admin\\.Locator", true, null),
